# tao-of-rust-codes

./: .gitignore  Cargo.toml  README.md  tao_of_rust_english.md
.github/ISSUE_TEMPLATE/: --.md  corrigendum.md
doc/: aliases.js  search-index.js
doc/ansi_term/: enum.Color.html  enum.Colour.html  struct.ANSIGenericStrings.html  struct.Style.html  struct.Suffix.html  type.ANSIString.html
doc/atty/: index.html
doc/backtrace/: all.html  fn.resolve.html  fn.trace.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Symbol.html  struct.SymbolName.html
doc/clap/: enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.Shell.html  index.html  struct.App.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html
doc/csv_challenge/: all.html  fn.replace_column.html  struct.Opt.html  write_csv.v.html
doc/failure/: index.html  macro.ensure.html  macro.format_err.html  struct.Backtrace.html  struct.Causes.html  struct.Context.html  struct.Error.html  struct.SyncFailure.html  trait.Fail.html  type.Fallible.html
doc/failure_derive/: Fail.m.html  all.html  derive.Fail.html  index.html
src/: lib.rs
src/ch10/csv_challenge/: Cargo.toml  README.md
src/ch10/csv_challenge/benches/: file_op_bench.rs
src/ch10/csv_challenge/input/: challenge.csv  no_header.csv
src/ch10/csv_challenge/output/: test.csv
src/ch10/csv_challenge/src/: core.rs  err.rs  lib.rs  main.rs  opt.rs
src/ch10/csv_challenge/src/core/: read.rs  write.rs
src/ch10/csv_challenge/tests/: integration_test.rs
src/ch9/failures_crate/: Cargo.toml  README.md
src/ch9/failures_crate/src/: lib.rs  main.rs
(+3337 files in other folders)
