[package]
name = "tao-of-rust"
version = "1.0.2"
authors = ["blackanger <blackanger.z@gmail.com>"]
description = "《Rust编程之道》随书源码"
homepage = "https://github.com/ZhangHanDong/tao-of-rust-codes"
documentation = "https://docs.rs/crate/tao-of-rust/"
repository = "https://github.com/ZhangHanDong/tao-of-rust-codes"
license = "MIT"
keywords = ["book"]
categories = ["rust-programming-book-codes"]
readme = "README.md"

[dependencies]
failures_crate = { version = "0.1", path = "./src/ch09/failures_crate" }
csv_challenge = { version = "0.1", path = "./src/ch10/csv_challenge" }
